--- a/Portfolio.html
+++ b/Portfolio.html
@@ -71,5 +71,35 @@
                 <img src="skill.jpg">
             </div>
         </section>
+        <section id="recent">
+            <div class="recent-heading">
+                <span>Recent</span>
+                <h3>Recent Doing Project Design</h3>
+            </div>
+            <div class="recent-img">
+                <img src="recent.jpg">
+            </div>
+            <a href="#" class="recent-btn">View Design</a>
+        </section>
+        <section id="client">
+            <div class="client-heading">
+                <span>Comments</span>
+                <h3>Client's Say</h3>
+            </div>
+            <div class="c-box-container">
+                <div class="client-box">
+                    <img src="jay.jpeg">
+                    <div class="star>">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                    <p>I was creating a website portfolio for myself and they were extremely helpful in helping me create it. Great communication from start to finish and they went the extra mile to add a few features that we had not initially discussed.</p>
+                    <a href="#">Read M ore</a>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
